--- a/package.json
+++ b/package.json
@@ -4,6 +4,13 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "test": "node --test"
+    "test": "node --test",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "npm test && npm run build"
+  },
+  "devDependencies": {
+    "vite": "^7.3.1"
   }
 }
