--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "test": "node --test",
+    "coverage": "node --test --experimental-test-coverage",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
