--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "npm test && npm run build"
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "check": "npm run format:check && npm test && npm run build"
   },
   "devDependencies": {
+    "prettier": "^3.8.1",
     "vite": "^7.3.1"
   },
   "dependencies": {
